app/styles/main.scss
 // Bourbon & Neat
@import '../../bower_components/bourbon/dist/bourbon';
@import '../../bower_components/neat/app/assets/stylesheets/neat';

// Custom Styles
body {
  background: #fafafa;
  color: #333;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 10px;

  * {
    box-sizing: border-box;
    vertical-align: top;
  }
}

main {
  border: solid 1px;
  border-radius: 10px;
  margin: 20px auto;
  min-height: 400px;
  overflow: auto;
  padding: 10px;
  width: 600px;
}

//================FORM===================

.form {
  float: left;
  padding: 10px;
  width: 33%;
}


//===============LIST====================

.todo-section {
  margin-left: 33%;
  overflow: auto;
  padding: 10px;
  width: 66%;
}

.todo-item {
  border-bottom: 1px solid;
  display: none;

  &.active {
    display: block;
  }

  &.editable {
    display: block;
  }
}

.completed {
  color: #ccc;
}

